--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -20,4 +20,5 @@ jobs:
         with:
           node-version: '20.x'
       - run: npm install
+        working-directory: ./task-launcher
       - run: npm run build
