--- a/task-launcher/package.json
+++ b/task-launcher/package.json
@@ -65,6 +65,7 @@
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.1",
     "csv-loader": "^3.0.5",
+    "cypress": "^13.9.0",
     "eslint": "^8.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
