Cosmetic. Updating cypress test
Signed-off-by: Suvodeep Pyne <pyne.suvodeep@gmail.com>

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -10,7 +10,7 @@ on:
       - main
 
 jobs:
-  npm-lint:
+  cypress-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,10 +33,6 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/task-launcher/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-
-      - name: Run the linter
-        run: npm run lint
-        working-directory: ./task-launcher
 
       - name: Run cypress tests
         uses: cypress-io/github-action@v6
