--- a/task-launcher/package.json
+++ b/task-launcher/package.json
@@ -19,6 +19,7 @@
     "version": "npm run format && git add -A",
     "postversion": "GIT_REMOTE=$(git remote -v | grep \"levante-framework/core-tasks.git \\(push\\)\" | cut -f 1) && git push $GIT_REMOTE && git push $GIT_REMOTE --tags",
     "dev": "npx webpack serve --mode development --env dbmode=development",
+    "dev:prod": "npx webpack serve --mode development --env dbmode=production",
     "deploy": "npm run build && firebase deploy --only hosting",
     "lint": "npx eslint --ext .ts,.tsx,.js,.jsx",
     "format": "npx prettier . --write"
