--- a/task-launcher/package.json
+++ b/task-launcher/package.json
@@ -63,6 +63,7 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-terser": "^0.4.3",
+    "@types/lodash": "^4.17.6",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.1",
     "csv-loader": "^3.0.5",
@@ -83,6 +84,7 @@
     "sass": "^1.64.2",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.1",
+    "typescript": "^5.5.2",
     "webpack": "^5.70.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
