--- a/task-launcher/package.json
+++ b/task-launcher/package.json
@@ -85,6 +85,7 @@
     "sass": "^1.64.2",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.5.1",
     "typescript": "^5.5.2",
     "webpack": "^5.70.0",
     "webpack-cli": "^5.1.4",
