--- a/task-launcher/tsconfig.json
+++ b/task-launcher/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "lib": ["ES2015", "dom"],
+    "lib": ["es2019", "dom"],
     "module": "commonjs",
     "outDir": "dist",
     "strict": true,
-    "target": "ES2015",
+    "target": "es2019",
+    "esModuleInterop": true,
   },
   "include": ["src", "serve"]
 }
