--- a/task-launcher/tsConfig.json
+++ b/task-launcher/tsConfig.json
@@ -7,5 +7,5 @@
     "target": "es2019",
     "esModuleInterop": true,
   },
-  "include": ["src", "serve"]
+  "include": ["src/**/*", "serve/**/*"]
 }
