--- a/task-launcher/tsconfig.json
+++ b/task-launcher/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["es2019", "dom"],
+    "lib": ["es2019", "dom", "DOM.Iterable"],
     "module": "commonjs",
     "outDir": "lib/ts",
     "strict": true,
