--- a/task-launcher/package.json
+++ b/task-launcher/package.json
@@ -64,6 +64,7 @@
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/lodash": "^4.17.7",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.1",
     "csv-loader": "^3.0.5",
