--- a/task-launcher/tsconfig.json
+++ b/task-launcher/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
     "lib": ["es2019", "dom"],
-    "module": "commonjs",
+    "module": "CommonJS",
     "outDir": "lib/ts",
     "strict": true,
     "target": "es2019",
     "esModuleInterop": true,
   },
-  "include": ["src/**/*", "serve/**/*"]
+  "include": ["src/**/*", "serve/**/*", "types/**/*"]
 }
