--- a/task-launcher/package.json
+++ b/task-launcher/package.json
@@ -45,6 +45,7 @@
     "@jspsych/plugin-html-slider-response": "^1.1.3",
     "@jspsych/plugin-preload": "^1.1.3",
     "@sentry/browser": "^8.7.0",
+    "cypress-real-events": "^1.13.0",
     "fscreen": "^1.2.0",
     "i18next": "^22.4.15",
     "i18next-browser-languagedetector": "^7.0.1",
