--- a/task-launcher/package.json
+++ b/task-launcher/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@levante-framework/core-tasks",
-  "version": "1.0.0-beta.24",
+  "version": "1.0.0-beta.27",
   "description": "",
-  "main": "lib/index.30aaaadd.js",
-  "module": "lib/index.30aaaadd.js",
+  "main": "lib/index.87ab5585.js",
+  "module": "lib/index.87ab5585.js",
   "type": "module",
   "files": [
     "lib",
-    "lib/resources"
+    "lib/resources",
+    "patchPackages.js"
   ],
   "scripts": {
     "build": "npx webpack --mode production --env dbmode=production",
