--- a/task-launcher/package.json
+++ b/task-launcher/package.json
@@ -68,6 +68,7 @@
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/fscreen": "^1.0.4",
     "@types/lodash": "^4.17.7",
     "@types/papaparse": "^5.3.15",
     "babel-loader": "^9.1.2",
