--- a/task-launcher/package.json
+++ b/task-launcher/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@levante-framework/core-tasks",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.38",
   "description": "",
   "main": "lib/index.1121e935.js",
   "module": "lib/index.1121e935.js",
