updating the package.json to a prod version

--- a/task-launcher/package.json
+++ b/task-launcher/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@levante-framework/core-tasks",
-  "version": "1.0.0-beta.39",
+  "version": "1.0.0",
   "description": "",
   "main": "lib/index.2c1701e3.js",
   "module": "lib/index.2c1701e3.js",
