--- a/.github/workflows/deploy-and-publish.yml
+++ b/.github/workflows/deploy-and-publish.yml
@@ -26,21 +26,29 @@ jobs:
 
     steps:
       # Checkout the code from the user-defined branch
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.branch }}  # Use the branch input provided by the user
 
       # Set up Node.js to use npm
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
 
-      # Install dependencies
       - name: Install dependencies
         run: npm install
+        working-directory: ./task-launcher
+      
+      - name: Cache npm dependencies
+        uses: actions/cache@v3
+        with:
+          path: ./task-launcher/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/task-launcher/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       # Authenticate with npm
       - name: Authenticate with npm
@@ -67,6 +75,7 @@ jobs:
       # Publish the package
       - name: Publish to npm
         run: npm publish --access public
+        working-directory: ./task-launcher
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
@@ -77,16 +86,16 @@ jobs:
     steps:
       # Checkout the levante-dashboard repository
       - name: Checkout dashboard repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: levante-framework/levante-dashboard
           token: ${{ secrets.GH_PAT }}
 
       # Set up Node.js for the dashboard repository
       - name: Set up Node.js for levante-dashboard
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '20.x'
 
       # Install dependencies for levante-dashboard
       - name: Install dependencies for levante-dashboard
