--- a/.github/workflows/deploy-and-publish.yml
+++ b/.github/workflows/deploy-and-publish.yml
@@ -38,10 +38,12 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
 
+      # Install dependencies
       - name: Install dependencies
         run: npm install
         working-directory: ./task-launcher
-      
+
+      # Cache npm dependencies
       - name: Cache npm dependencies
         uses: actions/cache@v3
         with:
@@ -56,6 +58,7 @@ jobs:
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        working-directory: ./task-launcher
 
       # Bump the version to the input version
       - name: Bump version
@@ -65,6 +68,7 @@ jobs:
           git config --global user.name "GitHub Actions"
           NEW_VERSION=$(npm version ${{ github.event.inputs.version-type }} -m "Bump version to %s")
           echo "new_version=${NEW_VERSION}" >> $GITHUB_OUTPUT
+        working-directory: ./task-launcher
 
       # Push the version update and tag to the repository
       - name: Push changes
