--- a/.github/workflows/deploy-and-publish.yml
+++ b/.github/workflows/deploy-and-publish.yml
@@ -1,13 +1,8 @@
-name: Deploy and Publish Package
+name: Version and Publish
 
 on:
   workflow_dispatch:
     inputs:
-      branch:
-        description: 'Branch to deploy from'
-        required: true
-        default: 'main'
-        type: string
       version-type:
         description: 'Type of version bump'
         required: true
@@ -19,72 +14,32 @@ on:
           - major
 
 jobs:
-  publish:
+  version-and-publish:
     runs-on: ubuntu-latest
-    outputs:
-      new_version: ${{ steps.version.outputs.new_version }}
-
     steps:
-      # Checkout the code from the user-defined branch
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.branch }}
           token: ${{ secrets.GIT_BOT_TOKEN }}
 
-      # Set up Node.js to use npm
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
 
-      # Install dependencies
       - name: Install dependencies
-        run: npm install
+        run: npm ci
         working-directory: ./task-launcher
 
-      # Cache npm dependencies
-      - name: Cache npm dependencies
-        uses: actions/cache@v3
-        with:
-          path: ./task-launcher/node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/task-launcher/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      # Authenticate with npm
-      - name: Authenticate with npm
-        run: |
-          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+      - name: Bump version and create tag
+        uses: anothrNick/github-tag-action@1.71.0
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        working-directory: ./task-launcher
+          GITHUB_TOKEN: ${{ secrets.GIT_BOT_TOKEN }}
+          WITH_V: true
+          DEFAULT_BUMP: ${{ github.event.inputs.version-type }}
+          RELEASE_BRANCHES: main
 
-      # Bump the version to the input version
-      - name: Bump version
-        id: version
-        run: |
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "GitHub Actions"
-          NEW_VERSION=$(npm version ${{ github.event.inputs.version-type }} --no-git-tag-version -m "Bump version to %s")
-          echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
-        working-directory: ./task-launcher
-
-      # Push the version update and tag to the repository
-      - name: Push changes
-        run: |
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "GitHub Actions"
-          git remote set-url origin https://x-access-token:${{ secrets.GIT_BOT_TOKEN }}@github.com/${{ github.repository }}.git
-          git add package.json
-          git commit -m "chore: bump version to ${{ steps.version.outputs.new_version }}"
-          git tag -a "v${{ steps.version.outputs.new_version }}" -m "Release v${{ steps.version.outputs.new_version }}"
-          git push origin ${{ github.event.inputs.branch }}
-          git push origin "v${{ steps.version.outputs.new_version }}"
-        working-directory: ./task-launcher
-
-      # Publish the package
       - name: Publish to npm
         run: npm publish --access public
         working-directory: ./task-launcher
@@ -92,7 +47,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   update-dashboard:
-    needs: publish
+    needs: version-and-publish
     runs-on: ubuntu-latest
 
     steps:
@@ -119,8 +74,8 @@ jobs:
         run: |
           git config --global user.email "github-actions@github.com"
           git config --global user.name "GitHub Actions"
-          npm install @levante-framework/core-tasks@${{ needs.publish.outputs.new_version }}
+          npm install @levante-framework/core-tasks@${{ needs.version-and-publish.outputs.new_version }}
           git add package.json package-lock.json
-          git commit -m "chore: update core-tasks to ${{ needs.publish.outputs.new_version }}"
+          git commit -m "chore: update core-tasks to ${{ needs.version-and-publish.outputs.new_version }}"
           git push origin main
         working-directory: levante-dashboard
