--- a/.github/workflows/deploy-and-publish.yml
+++ b/.github/workflows/deploy-and-publish.yml
@@ -60,34 +60,28 @@ jobs:
   update-dashboard:
     needs: version-and-publish
     runs-on: ubuntu-latest
-
     steps:
-      # Checkout the levante-dashboard repository
       - name: Checkout dashboard repository
         uses: actions/checkout@v4
         with:
           repository: levante-framework/levante-dashboard
           token: ${{ secrets.GIT_BOT_TOKEN }}
-          working-directory: levante-dashboard
+          path: levante-dashboard
 
-      # Set up Node.js for the dashboard repository
-      - name: Set up Node.js for levante-dashboard
+      - name: Setup Node.js for dashboard
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
 
-      # Install dependencies for levante-dashboard
-      - name: Install dependencies for levante-dashboard
-        run: npm install
-        working-directory: levante-dashboard
+      - name: Install dashboard dependencies
+        run: npm ci
+        working-directory: ./levante-dashboard
 
-      # Update the @levante-framework/core-tasks version in levante-dashboard's package.json
-      - name: Update dependency version
+      - name: Update core-tasks dependency
         run: |
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "GitHub Actions"
           npm install @levante-framework/core-tasks@${{ needs.version-and-publish.outputs.new_version }}
           git add package.json package-lock.json
           git commit -m "chore: update core-tasks to ${{ needs.version-and-publish.outputs.new_version }}"
           git push origin main
-        working-directory: levante-dashboard
+        working-directory: ./levante-dashboard
