--- a/.github/workflows/deploy-and-publish.yml
+++ b/.github/workflows/deploy-and-publish.yml
@@ -63,29 +63,18 @@ jobs:
     needs: version-and-publish
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout dashboard repository
-        uses: actions/checkout@v4
+      - name: Generate GitHub App token
+        id: generate_token
+        uses: tibdex/github-app-token@v2
         with:
+          app_id: ${{ secrets.LEVANTE_BOT_APP_ID }}
+          private_key: ${{ secrets.LEVANTE_BOT_APP_PRIVATE_KEY }}
           repository: levante-framework/levante-dashboard
-          token: ${{ secrets.GIT_BOT_TOKEN }}
-          path: levante-dashboard
 
-      - name: Setup Node.js for dashboard
-        uses: actions/setup-node@v4
+      - name: Trigger dashboard update
+        uses: peter-evans/repository-dispatch@v2
         with:
-          node-version: '20.x'
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Install dashboard dependencies
-        run: npm ci
-        working-directory: ./levante-dashboard
-
-      - name: Update core-tasks dependency
-        run: |
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "GitHub Actions"
-          npm install @levante-framework/core-tasks@${{ needs.version-and-publish.outputs.new_version }}
-          git add package.json package-lock.json
-          git commit -m "chore: update core-tasks to ${{ needs.version-and-publish.outputs.new_version }}"
-          git push origin main
-        working-directory: ./levante-dashboard
+          token: ${{ steps.generate_token.outputs.token }}
+          repository: levante-framework/levante-dashboard
+          event-type: update-core-tasks
+          client-payload: '{"version": "${{ needs.version-and-publish.outputs.new_version }}"}'
