--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -12,6 +12,11 @@ on:
         required: false
         type: string
         default: ''
+      ref:
+        description: 'Branch to run the workflow from'
+        required: true
+        type: string
+        default: 'main'
 
 jobs:
   create-release:
@@ -21,6 +26,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.inputs.ref }}
 
       - name: List available tags
         run: |
