--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   create-release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -52,4 +54,4 @@ jobs:
             ## Changeset
             ${{ steps.generate_changelog.outputs.changelog }}
           draft: false
-          prerelease: false 
+          prerelease: false
