--- a/task-launcher/.firebaserc
+++ b/task-launcher/.firebaserc
@@ -1,9 +1,9 @@
 {
   "projects": {
-    "default": "hs-levante-assessment-dev"
+    "default": "hs-levante-admin-dev"
   },
   "targets": {
-    "hs-levante-assessment-dev": {
+    "hs-levante-admin-dev": {
       "hosting": {
         "core-tasks": [
           "core-tasks"
