--- a/task-launcher/package.json
+++ b/task-launcher/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@levante-framework/core-tasks",
-  "version": "1.0.12",
+  "version": "1.0.12-beta.2",
   "description": "",
-  "main": "lib/index.ae7211fc.js",
-  "module": "lib/index.ae7211fc.js",
+  "main": "lib/index.87fba476.js",
+  "module": "lib/index.87fba476.js",
   "type": "module",
   "files": [
     "lib",
@@ -37,7 +37,6 @@
   "license": "",
   "dependencies": {
     "@bdelab/jscat": "^3.0.3",
-    "@bdelab/roar-firekit": "^6.1.2",
     "@bdelab/roar-utils": "^1.0.11",
     "@jspsych-contrib/plugin-audio-multi-response": "^1.0.0",
     "@jspsych-contrib/plugin-corsi-blocks": "^1.0.0",
@@ -47,6 +46,7 @@
     "@jspsych/plugin-fullscreen": "^1.1.0",
     "@jspsych/plugin-html-slider-response": "^1.1.3",
     "@jspsych/plugin-preload": "^1.1.3",
+    "@levante-framework/firekit": "^9.3.0",
     "@sentry/browser": "^8.7.0",
     "cypress-real-events": "^1.13.0",
     "fscreen": "^1.2.0",
