spaces, GH action cypress tests point to db temporarily

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -39,4 +39,4 @@ jobs:
         with:
           browser: chrome
           working-directory: ./task-launcher
-          start: npm run dev
+          start: npm run dev:db
