--- a/task-launcher/package.json
+++ b/task-launcher/package.json
@@ -47,7 +47,7 @@
     "@jspsych/plugin-fullscreen": "^1.1.0",
     "@jspsych/plugin-html-slider-response": "^1.1.3",
     "@jspsych/plugin-preload": "^1.1.3",
-    "@levante-framework/firekit": "^9.3.0-beta.1",
+    "@levante-framework/firekit": "^9.3.1",
     "@sentry/browser": "^8.7.0",
     "cypress-real-events": "^1.13.0",
     "fscreen": "^1.2.0",
