--- a/task-launcher/firebase.json
+++ b/task-launcher/firebase.json
@@ -1,5 +1,6 @@
 {
   "hosting": {
+    "target": "core-tasks",
     "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   },
