--- a/task-launcher/package.json
+++ b/task-launcher/package.json
@@ -11,7 +11,7 @@
     "patchPackages.js"
   ],
   "scripts": {
-    "build": "npx webpack --mode production --env dbmode=production",
+    "build": "npx webpack --mode production --env dbmode=development",
     "prepackage": "rimraf lib/",
     "package": "npx rollup -c",
     "postpackage": "node postBuildPackage.js",
@@ -21,7 +21,7 @@
     "postversion": "GIT_REMOTE=$(git remote -v | grep \"levante-framework/core-tasks.git \\(push\\)\" | cut -f 1) && git push $GIT_REMOTE && git push $GIT_REMOTE --tags",
     "dev": "npx webpack serve --mode development --env dbmode=development --env EMULATORS=true",
     "dev:db": "npx webpack serve --mode development --env dbmode=development",
-    "deploy": "npm run build && firebase deploy --only hosting",
+    "deploy": "npm run build && firebase deploy --only hosting:core-tasks",
     "lint": "npx eslint --ext .ts,.tsx,.js,.jsx",
     "format": "npx prettier . --write",
     "patchPackages": "node patchPackages.js",
