--- a/task-launcher/package.json
+++ b/task-launcher/package.json
@@ -57,8 +57,7 @@
     "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
     "regenerator-runtime": "^0.13.9",
-    "store2": "^2.13.2",
-    "vue-router": "^4.5.1"
+    "store2": "^2.13.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.5",
