add demo mode (no Firestore)

--- a/task-launcher/package.json
+++ b/task-launcher/package.json
@@ -12,6 +12,7 @@
   ],
   "scripts": {
     "build": "npx webpack --mode production --env dbmode=development",
+    "build:demo": "npx webpack --mode production --env dbmode=development --env demo=true",
     "prepackage": "rimraf lib/",
     "package": "npx rollup -c",
     "postpackage": "node postBuildPackage.js",
@@ -19,9 +20,9 @@
     "preversion": "npm run lint",
     "version": "npm run format && git add -A",
     "postversion": "GIT_REMOTE=$(git remote -v | grep \"levante-framework/core-tasks.git \\(push\\)\" | cut -f 1) && git push $GIT_REMOTE && git push $GIT_REMOTE --tags",
-    "dev": "npx webpack serve --mode development --env dbmode=development --env EMULATORS=true",
-    "dev:db": "npx webpack serve --mode development --env dbmode=development",
-    "deploy": "npm run build && firebase deploy --only hosting:core-tasks",
+    "dev": "npx webpack serve --mode development --env dbmode=development --env EMULATORS=true --env demo=true",
+    "dev:db": "npx webpack serve --mode development --env dbmode=development --env demo=true",
+    "deploy": "npm run build:demo && firebase deploy --only hosting:core-tasks",
     "lint": "npx eslint --ext .ts,.tsx,.js,.jsx",
     "format": "npx prettier . --write",
     "patchPackages": "node patchPackages.js",
